<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/solid_green"
        android:text="@string/element1" />

    <Button
        android:id="@+id/button1"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/element2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:background="@color/solid_green"
        android:text="@string/element3" />

    <Button
        android:id="@+id/button2"
        android:layout_weight="2"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:text="@string/element4" />

</LinearLayout>